--- a/Paicord/Resources/Localizable.xcstrings
+++ b/Paicord/Resources/Localizable.xcstrings
@@ -253,6 +253,9 @@
     "Profile" : {
 
     },
+    "Quick Switcher" : {
+
+    },
     "Remind Me Later" : {
 
     },
@@ -366,6 +369,9 @@
 
     },
     "Welcome to the start of this channel" : {
+
+    },
+    "Where would you like to go?" : {
 
     },
     "wip bro go do totp" : {
