attachment viewer work

--- a/Paicord/Resources/Localizable.xcstrings
+++ b/Paicord/Resources/Localizable.xcstrings
@@ -31,9 +31,6 @@
     "%lld members" : {
 
     },
-    "•" : {
-
-    },
     "%lld Result%@" : {
       "localizations" : {
         "en" : {
@@ -43,6 +40,9 @@
           }
         }
       }
+    },
+    "•" : {
+
     },
     "1" : {
 
@@ -203,6 +203,9 @@
     "Installed Themes" : {
 
     },
+    "Invalid video URL" : {
+
+    },
     "Join the [Paicord Server](https://discord.gg/fqhPGHPyaK) to manage badges!" : {
 
     },
@@ -339,6 +342,9 @@
 
     },
     "Unknown User" : {
+
+    },
+    "Unsupported attachment type" : {
 
     },
     "Unsupported block: %@" : {
